# reproduce-scmp

./: .gitignore  README.md  gain_and_cost_functions  pyproject.toml  strategicClassification-BatchedCCP.py  strategicClassification-Burden.py  strategicClassification-FlexibilityAroundCost.py  strategicClassification-HardtComparison.py  strategicClassification-Manifold-Simple.py  strategicClassification-RNN.py  strategicClassification-Recourse.py  strategicClassification-RobustnessAroundCost.py  strategicClassification-Utility.py  strategicClassification-Vanilla.py  strategicClassification-Vanilla_VS_Hardt.py
articles/: Article_reviews.txt  classes.txt
src/strategic_classification/: __init__.py  cli.py
src/strategic_classification/config/: constants.py
src/strategic_classification/models/: baseccp.py  basedelta.py  ccp.py  delta.py  recourse.py  rnn.py  vanila.py
src/strategic_classification/models/batched/: __init__.py  batched.py  batchedccp.py  batcheddelta.py
src/strategic_classification/models/burden/: __init__.py  burden.py  burdenccp.py  burdendelta.py
src/strategic_classification/models/manifold/: __init__.py  manifold.py  manifoldcpp.py  manifolddelta.py
src/strategic_classification/models/recourse/: __init__.py  recourse.py  recoursecpp.py  recoursedelta.py
src/strategic_classification/models/rnn/: __init__.py  rnn.py  rnnccp.py  rnndelta.py
src/strategic_classification/models/utility/: __init__.py  utilityccp.py  utilitydelta.py  utiliy.py
src/strategic_classification/models/vanila/: __init__.py  vanila.py  vanilaccp.py  vaniladelta.py
src/strategic_classification/utils/: data_utils.py  dataloader.py  eda.py  gain_and_cost_func.py  metrics.py
tests/: test_rnn.py
