[project]
name = "reproduce-scmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpylayers>=0.1.9",
    "dccp>=1.0.5",
    "diffcp>=1.1.4",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gekko>=1.3.0",
    "guppy3>=3.1.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "llvmlite>=0.44.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pybind11>=2.13.6",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "typer>=0.15.2",
    "typing-extensions>=4.13.2",
    "werkzeug>=3.1.3",
]

[project.scripts]
scmp = "strategic_classification.cli:app"
